# pycon_us_ics

./: CHANGELOG.md  LICENSE  README.md  conference.json  conference_2024.json  events.ics  pyproject.toml
.github/workflows/: github-actions.yml
docs/: all_events.ics  community_organizers_summit.ics  education_summit.ics  events.ics  flaskcon.ics  hometown_heroes.ics  language_summit.ics  maintainers_summit.ics  open_spaces.ics  packaging_summit.ics  typing_summit.ics
docs/kind/: break.ics  charla.ics  event.ics  informational.ics  lightning-talks.ics  plenary.ics  poster.ics  sponsor-workshop.ics  summit.ics  talk.ics  tutorial.ics
docs/section/: events.ics  posters.ics  sponsor-presentations.ics  talks.ics  tutorials.ics
pycon_us_ics/: community_organizers_summit.py  education_summit.py  flaskcon.py  hometown_heroes.py  language_summit.py  maintainers_summit.py  model.py  open_spaces.py  packaging_summit.py  parse_open_spaces.py  pycon.py  typing_summit.py
